[package]
name = "fusetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
env_logger = "0.11.3"
jpegxl-rs = { version = "0.10.1", features = [] }
fuser = "0.14.0"
log = "0.4.21"
time = "0.1.45"
clap = { version = "4.5.3", features = ["derive"] }
